--- a/src/components/orders/new-order.template.html
+++ b/src/components/orders/new-order.template.html
@@ -135,7 +135,7 @@
         </div>
         <div class="col-xs">
             <div class="btn-container">
-                <a href="javascript:void(0);" (click)="newOrder();" class="btn-primary">
+                <a href="javascript:void(0);" (click)="save();" class="btn-primary">
                      <span><i class="material-icons small">save</i></span>
                      <div class="btn-text">Save</div>
                 </a>
