Fork sync with bitbucket repository to do collab work.

--- a/src/components/dashboard/dashboard.template.html
+++ b/src/components/dashboard/dashboard.template.html
@@ -4,7 +4,7 @@
             <div class="content">
                 <div class="flex-grid bottom-line">
                     <div class="col">
-                        <i class="material-icons large primary">donut_small</i>
+                        <i class="material-icons large secondary">donut_small</i>
                     </div>
                     <div class="col">
                         <div class="right">
@@ -17,9 +17,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="flex-grid padded-aside">
+                <div class="flex-grid padded-top">
                     <div class="col-xs">
-                        <i class="material-icons small primary">autorenew</i>
+                        <i class="material-icons small secondary">autorenew</i>
                     </div>
                     <div class="col-lg update">
                         Updated now.
@@ -33,7 +33,7 @@
             <div class="content">
                 <div class="flex-grid bottom-line">
                     <div class="col">
-                        <i class="material-icons large primary">donut_small</i>
+                        <i class="material-icons large secondary">donut_small</i>
                     </div>
                     <div class="col">
                         <div class="right">
@@ -46,9 +46,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="flex-grid padded-aside">
+                <div class="flex-grid padded-top">
                     <div class="col-xs">
-                        <i class="material-icons small primary">autorenew</i>
+                        <i class="material-icons small secondary">autorenew</i>
                     </div>
                     <div class="col-lg update">
                         Updated now.
@@ -62,7 +62,7 @@
             <div class="content">
                 <div class="flex-grid bottom-line">
                     <div class="col">
-                        <i class="material-icons large primary">donut_small</i>
+                        <i class="material-icons large secondary">donut_small</i>
                     </div>
                     <div class="col">
                         <div class="right">
@@ -75,9 +75,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="flex-grid padded-aside">
+                <div class="flex-grid padded-top">
                     <div class="col-xs">
-                        <i class="material-icons small primary">autorenew</i>
+                        <i class="material-icons small secondary">autorenew</i>
                     </div>
                     <div class="col-lg update">
                         Updated now.
@@ -91,7 +91,7 @@
             <div class="content">
                 <div class="flex-grid bottom-line">
                     <div class="col">
-                        <i class="material-icons large primary">donut_small</i>
+                        <i class="material-icons large secondary">donut_small</i>
                     </div>
                     <div class="col">
                         <div class="right">
@@ -104,9 +104,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="flex-grid padded-aside">
+                <div class="flex-grid padded-top">
                     <div class="col-xs">
-                        <i class="material-icons small primary">autorenew</i>
+                        <i class="material-icons small secondary">autorenew</i>
                     </div>
                     <div class="col-lg update">
                         Updated now.
@@ -127,6 +127,7 @@
             </div>
             <div class="chart">
                 <canvas #barchart id="barChart" height="auto">{{ barChart }}</canvas>
+                <!-- <div id="amchart-1" height="200px"></div> -->
             </div>
         </div>
     </div>
