--- a/src/components/navbar/navbar.template.html
+++ b/src/components/navbar/navbar.template.html
@@ -1,5 +1,37 @@
-<div class="flex-container col navbar-container padded-aside">
-    <div class="header">
-        <h2>{{title}}</h2>
+<div class="navbar">
+    <div class="flex-container row">
+        <div class="flex-container row">
+            <div class="col-sm">
+                <div class="logo">
+                    <img alt="" src="https://jive.com/wp-content/themes/jive_wordpress/img/logo-jive-logmein.svg">
+                </div>
+            </div>
+            <div class="col">
+                <div class="title">
+                    <h1>Jive Inventory</h1>
+                </div>
+            </div>
+        </div>
+        <div class="col"></div>
+        <div class="col-sm">
+            <div class="flex-container row user-profile">
+                <div class="col-sm">
+                    <div class="avatar">
+                        <i class="material-icons dark large">account_circle</i>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="flex-container col info">
+                        <div class="col name">Oscar Diaz</div>
+                        <div class="col job-title">BI - Software Developer</div>
+                    </div>
+                </div>
+                <div class="col-xs">
+                    <div class="arrow-dwn">
+                        <i class="material-icons dark small">arrow_drop_down</i>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
