--- a/src/components/orders/new-order.component.scss
+++ b/src/components/orders/new-order.component.scss
@@ -4,4 +4,36 @@
             color: gray;
         }
     }
+    .tab {
+        font-size: 13px;
+        width: 175px;
+        background-color: #ddd;
+        border-radius: 0px;
+        border: 1px solid darkgray;
+        padding: 5px;
+        margin: 0px 5px -40px 0px;
+        text-align: -webkit-left;
+        cursor: pointer;
+        span.count {
+            margin-left: 5px;
+            font-weight: 700;
+            font-size: 16px;
+        }
+    }
+    .tabSelected {
+        color: white;
+        background-color: #808080;
+    }
+    .close {
+        position: relative;
+        bottom: 8px;
+        display: inline;
+        left: 158px;
+        cursor: pointer;
+        color: #ddd;
+        background: #424242;
+        padding: 4px 8px;
+        border-radius: 20%;
+        font-size: 12px;
+    }
 }
