--- a/src/components/orders/orders.template.html
+++ b/src/components/orders/orders.template.html
@@ -1,3 +1,4 @@
+<!-- ORDER CONTROLS -->
 <div class="flex-grid padded-aside">
     <div class="col-md">
         <div class="flex-grid">
@@ -11,7 +12,7 @@
             </div>
             <div class="col-xs">
                 <div class="btn-container">
-                    <a href="javascript:void(0);" class="btn-secondary">
+                    <a (click)="editOrder()" href="javascript:void(0);" [class.disabled]="!canEdit" class="btn-secondary">
                          <span class="left">
                             <i class="material-icons small">edit</i>
                         </span>
@@ -43,6 +44,8 @@
         </div>
     </div>
 </div>
+
+<!-- ORDER BY TIME CHART -->
 <div class="flex-container row padded-aside">
     <div class="col card">
         <div class="chart">
@@ -59,13 +62,14 @@
     </div>
 </div>
 
+<!-- ORDER DATA TABLE -->
 <div class="flex-container row padded-aside">
     <div class="wrapper">
         <div class="Rtable Rtable--5cols Rtable--collapse">
             <div class="Rtable-row Rtable-row--head">
-                <div class="Rtable-cell pdf-cell column-heading">Checkbox</div>
-                <div class="Rtable-cell date-cell column-heading">Order No.</div>
-                <div class="Rtable-cell date-cell column-heading">Ticket No.</div>
+                <div class="Rtable-cell small-cell column-heading">Checkbox</div>
+                <div class="Rtable-cell small-cell column-heading">Order No.</div>
+                <div class="Rtable-cell small-cell column-heading">Ticket No.</div>
                 <div class="Rtable-cell date-cell column-heading">Type</div>
                 <div class="Rtable-cell date-cell column-heading">Order Type</div>
                 <div class="Rtable-cell date-cell column-heading">Date</div>
@@ -73,25 +77,27 @@
                 <div class="Rtable-cell date-cell column-heading">Select</div>
             </div>
 
-            <div class="Rtable-row">
-                <div class="Rtable-cell pdf-cell">
+            <div class="Rtable-row" *ngFor="let order of orderList">
+                <div class="Rtable-cell small-cell">
                     <div class="Rtable-cell--heading">Checkbox</div>
                     <div class="Rtable-cell--content date-content"><span class="row-title">
                             <label class="container">
-                                <input type="checkbox" checked="checked">
+                                <input (change)="toggleCheck(order)" type="checkbox" [checked]="order.checked">
                                 <span class="checkmark"></span>
                             </label>
                         </span>
                     </div>
                 </div>
-                <div class="Rtable-cell date-cell">
+                <div class="Rtable-cell small-cell">
                     <div class="Rtable-cell--heading">Order No.</div>
-                    <div class="Rtable-cell--content date-content"><span class="row-title">002154</span><br />6:00 pm
-                        (CDT)</div>
+                    <div class="Rtable-cell--content date-content">
+                        <span class="row-title">{{order.orderNumber}}</span>
+                        <!-- <br />6:00 pm(CDT) -->
+                    </div>
                 </div>
-                <div class="Rtable-cell date-cell">
+                <div class="Rtable-cell small-cell">
                     <div class="Rtable-cell--heading">Ticket No.</div>
-                    <div class="Rtable-cell--content title-content">0000054587</div>
+                    <div class="Rtable-cell--content title-content">{{order.ticketNumber}}</div>
                 </div>
                 <div class="Rtable-cell date-cell">
                     <div class="Rtable-cell--heading">Type</div>
@@ -99,138 +105,15 @@
                 </div>
                 <div class="Rtable-cell date-cell">
                     <div class="Rtable-cell--heading">Order Type</div>
-                    <div class="Rtable-cell--content title-content">Buy</div>
+                    <div class="Rtable-cell--content title-content">{{order.orderType.name}}</div>
                 </div>
                 <div class="Rtable-cell date-cell">
                     <div class="Rtable-cell--heading">Date</div>
-                    <div class="Rtable-cell--content title-content">Date</div>
+                    <div class="Rtable-cell--content title-content">{{order.orderDate}}</div>
                 </div>
                 <div class="Rtable-cell date-cell">
                     <div class="Rtable-cell--heading">Status</div>
-                    <div class="Rtable-cell--content title-content">Completed</div>
-                </div>
-                <div class="Rtable-cell date-cell">
-                    <div class="Rtable-cell--heading">Select</div>
-                    <div class="Rtable-cell--content title-content">Checked</div>
-                </div>
-            </div>
-            <div class="Rtable-row">
-                <div class="Rtable-cell pdf-cell">
-                    <div class="Rtable-cell--heading">Checkbox</div>
-                    <div class="Rtable-cell--content date-content"><span class="row-title">
-                            <label class="container">
-                                <input type="checkbox" checked="checked">
-                                <span class="checkmark"></span>
-                            </label>
-                        </span>
-                    </div>
-                </div>
-                <div class="Rtable-cell date-cell">
-                    <div class="Rtable-cell--heading">Order No.</div>
-                    <div class="Rtable-cell--content date-content"><span class="row-title">002154</span><br />6:00 pm
-                        (CDT)</div>
-                </div>
-                <div class="Rtable-cell date-cell">
-                    <div class="Rtable-cell--heading">Ticket No.</div>
-                    <div class="Rtable-cell--content title-content">0000054587</div>
-                </div>
-                <div class="Rtable-cell date-cell">
-                    <div class="Rtable-cell--heading">Type</div>
-                    <div class="Rtable-cell--content title-content">In</div>
-                </div>
-                <div class="Rtable-cell date-cell">
-                    <div class="Rtable-cell--heading">Order Type</div>
-                    <div class="Rtable-cell--content title-content">Buy</div>
-                </div>
-                <div class="Rtable-cell date-cell">
-                    <div class="Rtable-cell--heading">Date</div>
-                    <div class="Rtable-cell--content title-content">Date</div>
-                </div>
-                <div class="Rtable-cell date-cell">
-                    <div class="Rtable-cell--heading">Status</div>
-                    <div class="Rtable-cell--content title-content">Completed</div>
-                </div>
-                <div class="Rtable-cell date-cell">
-                    <div class="Rtable-cell--heading">Select</div>
-                    <div class="Rtable-cell--content title-content">Checked</div>
-                </div>
-            </div>
-            <div class="Rtable-row">
-                <div class="Rtable-cell pdf-cell">
-                    <div class="Rtable-cell--heading">Checkbox</div>
-                    <div class="Rtable-cell--content date-content"><span class="row-title">
-                            <label class="container">
-                                <input type="checkbox" checked="checked">
-                                <span class="checkmark"></span>
-                            </label>
-                        </span>
-                    </div>
-                </div>
-                <div class="Rtable-cell date-cell">
-                    <div class="Rtable-cell--heading">Order No.</div>
-                    <div class="Rtable-cell--content date-content"><span class="row-title">002154</span><br />6:00 pm
-                        (CDT)</div>
-                </div>
-                <div class="Rtable-cell date-cell">
-                    <div class="Rtable-cell--heading">Ticket No.</div>
-                    <div class="Rtable-cell--content title-content">0000054587</div>
-                </div>
-                <div class="Rtable-cell date-cell">
-                    <div class="Rtable-cell--heading">Type</div>
-                    <div class="Rtable-cell--content title-content">In</div>
-                </div>
-                <div class="Rtable-cell date-cell">
-                    <div class="Rtable-cell--heading">Order Type</div>
-                    <div class="Rtable-cell--content title-content">Buy</div>
-                </div>
-                <div class="Rtable-cell date-cell">
-                    <div class="Rtable-cell--heading">Date</div>
-                    <div class="Rtable-cell--content title-content">Date</div>
-                </div>
-                <div class="Rtable-cell date-cell">
-                    <div class="Rtable-cell--heading">Status</div>
-                    <div class="Rtable-cell--content title-content">Completed</div>
-                </div>
-                <div class="Rtable-cell date-cell">
-                    <div class="Rtable-cell--heading">Select</div>
-                    <div class="Rtable-cell--content title-content">Checked</div>
-                </div>
-            </div>
-            <div class="Rtable-row">
-                <div class="Rtable-cell pdf-cell">
-                    <div class="Rtable-cell--heading">Checkbox</div>
-                    <div class="Rtable-cell--content date-content"><span class="row-title">
-                            <label class="container">
-                                <input type="checkbox" >
-                                <span class="checkmark"></span>
-                            </label>
-                        </span>
-                    </div>
-                </div>
-                <div class="Rtable-cell date-cell">
-                    <div class="Rtable-cell--heading">Order No.</div>
-                    <div class="Rtable-cell--content date-content"><span class="row-title">002154</span><br />6:00 pm
-                        (CDT)</div>
-                </div>
-                <div class="Rtable-cell date-cell">
-                    <div class="Rtable-cell--heading">Ticket No.</div>
-                    <div class="Rtable-cell--content title-content">0000054587</div>
-                </div>
-                <div class="Rtable-cell date-cell">
-                    <div class="Rtable-cell--heading">Type</div>
-                    <div class="Rtable-cell--content title-content">In</div>
-                </div>
-                <div class="Rtable-cell date-cell">
-                    <div class="Rtable-cell--heading">Order Type</div>
-                    <div class="Rtable-cell--content title-content">Buy</div>
-                </div>
-                <div class="Rtable-cell date-cell">
-                    <div class="Rtable-cell--heading">Date</div>
-                    <div class="Rtable-cell--content title-content">Date</div>
-                </div>
-                <div class="Rtable-cell date-cell">
-                    <div class="Rtable-cell--heading">Status</div>
-                    <div class="Rtable-cell--content title-content">Completed</div>
+                    <div class="Rtable-cell--content title-content">{{order.orderState}}</div>
                 </div>
                 <div class="Rtable-cell date-cell">
                     <div class="Rtable-cell--heading">Select</div>
