--- a/src/components/inventory/inventory.template.html
+++ b/src/components/inventory/inventory.template.html
@@ -19,35 +19,35 @@
     </div>
     <div class="col-sm">
         <form class="example" action="javascript:void(0);">
-            <select required [(ngModel)]="filterValues.warehouseCat" name="warehouse">
+            <select required [(ngModel)]="filterValues.warehouseCat" (ngModelChange)="filterItems2($event)" name="warehouse" >
                 <option *ngFor="let item of warehouses" [ngValue]="item">{{item.name}}</option>
             </select>
         </form>
     </div>
     <div class="col-sm">
         <form class="example" action="javascript:void(0);">
-            <select required [(ngModel)]="filterValues.inventoryCat" name="inventory">
+            <select required [(ngModel)]="filterValues.inventoryCat" (ngModelChange)="filterItems2($event)" name="inventory">
                 <option *ngFor="let item of inventories" [ngValue]="item">{{item.name}}</option>
             </select>
         </form>
     </div>
     <div class="col-sm">
         <form class="example" action="javascript:void(0);">
-            <select required [(ngModel)]="filterValues.onInventoryStatusCat" name="oninvstatus">
+            <select required [(ngModel)]="filterValues.onInventoryStatusCat" (ngModelChange)="filterItems2($event)" name="oninvstatus">
                 <option *ngFor="let item of inventoryStatuses" [ngValue]="item">{{item.name}}</option>
             </select>
         </form>
     </div>
     <div class="col-sm">
         <form class="example" action="javascript:void(0);">
-            <select required [(ngModel)]="filterValues.itemStatusCat" name="itemstatus">
+            <select required [(ngModel)]="filterValues.itemStatusCat" (ngModelChange)="filterItems2($event)" name="itemstatus">
                 <option *ngFor="let item of itemStatuses" [ngValue]="item">{{item.name}}</option>
             </select>
         </form>
     </div>
     <div class="col-sm">
         <div class="btn-container">
-            <a href="javascript:void(0);" (click)="newOrder();" class="btn-primary">
+            <a href="javascript:void(0);" (click)="filterItems();" class="btn-primary">
                 <span><i class="material-icons small">save</i></span>
                 <div class="btn-text">Filter</div>
             </a>
