--- a/src/components/orders/new-order.template.html
+++ b/src/components/orders/new-order.template.html
@@ -51,7 +51,22 @@
     <div class="flex-grid padded-aside">
         <div class="col">
             <div class="title">
-                Default Values
+                Warehouse
+            </div>
+        </div>
+        <div class="col">
+            <div class="title">
+                Inventory Name
+            </div>
+        </div>
+        <div class="col">
+            <div class="title">
+                Status
+            </div>
+        </div>
+        <div class="col">
+            <div class="title">
+                Item State
             </div>
         </div>
     </div>
