adding clear search button on products form

--- a/src/components/products/products.template.html
+++ b/src/components/products/products.template.html
@@ -36,6 +36,11 @@
                          <span><i class="material-icons small">search</i></span>
                     </a>
                 </div>
+                <div class="btn-container padded-top">
+                    <a href="javascript:void(0);" (click)="restoreSearch();" class="btn-primary">
+                         <span><i class="material-icons small">clear</i></span>
+                    </a>
+                </div>
             </form>
         </div>
     </div>
