--- a/src/components/products/products.template.html
+++ b/src/components/products/products.template.html
@@ -68,7 +68,7 @@
             <div class="Rtable Rtable--5cols Rtable--collapse">
                 <div class="Rtable-row Rtable-row--head">
                     <div class="Rtable-cell small-cell column-heading">Select</div>
-                    <div class="Rtable-cell date-cell column-heading">Name</div> 
+                    <div class="Rtable-cell topic-cell column-heading">Name</div> 
                     <div class="Rtable-cell date-cell column-heading">Manufacturer</div>                    
                     <div class="Rtable-cell date-cell column-heading">Product Group</div>                                        
                     <div class="Rtable-cell date-cell column-heading">Part Number</div>
@@ -91,7 +91,7 @@
                             </span>
                         </div>
                     </div>
-                    <div class="Rtable-cell date-cell">
+                    <div class="Rtable-cell topic-cell">
                         <div class="Rtable-cell--heading">Name</div>
                         <div class="Rtable-cell--content title-content">{{product.name}}</div>
                     </div>
@@ -114,10 +114,6 @@
                     <div class="Rtable-cell date-cell">
                         <div class="Rtable-cell--heading">Total Items</div>
                         <div class="Rtable-cell--content title-content">{{product.totalItems}}</div>
-                    </div>
-                    <div class="Rtable-cell date-cell">
-                        <div class="Rtable-cell--heading">Created Date</div>
-                        <div class="Rtable-cell--content title-content">{{product.createdDate | formatDate}}</div>
                     </div>
                     <div class="Rtable-cell date-cell">
                         <div class="Rtable-cell--heading">Min Price</div>
