--- a/src/components/products/products.template.html
+++ b/src/components/products/products.template.html
@@ -36,7 +36,7 @@
                          <span><i class="material-icons small">search</i></span>
                     </a>
                 </div>
-                <div class="btn-container padded-top">
+                <div class="btn-container padded-top padded-left">
                     <a href="javascript:void(0);" (click)="restoreSearch();" class="btn-primary">
                          <span><i class="material-icons small">clear</i></span>
                     </a>
