minor visual improvement

--- a/src/components/products/products.template.html
+++ b/src/components/products/products.template.html
@@ -3,10 +3,10 @@
     <h1>Products</h1>
 </div>
 <div class="flex-grid padded-aside">
-        <h2 class="padded-top">Search by: </h2>
+        <h2 class="padded-top-two">Search by: </h2>
         <div class="col-md">
             <form class="flex-container row  example" action="javascript:void(0);">
-                <input class="search col-md padded-top" type="text" placeholder="Product name" name="searchByName" [(ngModel)] = "productSearchName" (keyup.enter)="searchProduct();">
+                <input class="search col-md padded-top padded-left" type="text" placeholder="Product name" name="searchByName" [(ngModel)] = "productSearchName" (keyup.enter)="searchProduct();">
                 <div class="col-md">
                     <div class="col">
                         <div class="title">
