change icon of new order

--- a/src/components/orders/orders.template.html
+++ b/src/components/orders/orders.template.html
@@ -5,7 +5,7 @@
             <div class="col-sm">
                 <div class="btn-container">
                     <a href="javascript:void(0);" (click)="newOrder();" class="btn-primary">
-                        <span><i class="material-icons small">save</i></span>
+                        <span><i class="material-icons small">add_circle_outline</i></span>
                         <div class="btn-text">New Order(s)</div>
                     </a>
                 </div>
