fix: order saved as completed, can't be edited

--- a/src/components/navbar/navbar.template.html
+++ b/src/components/navbar/navbar.template.html
@@ -22,7 +22,7 @@
                 </div>
                 <div class="col">
                     <div class="flex-container col info">
-                        <div class="col name">Oscar Diaz</div>
+                        <div class="col name">User </div>
                         <div class="col job-title">BI - Software Developer</div>
                     </div>
                 </div>
